@@ -1,3 +1,8 @@
+2001-01-11  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* sendmsg.c (__objc_print_dtable_stats): Don't use #ifdef inside
+	printf.
+
 2000-03-29  Zack Weinberg  <zack@wolery.cumb.org>
 
 	* objc/Protocol.h, objc/objc-list.h: Change #endif labels to
